--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pokémon Search App</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Pokémon Search App</title>
+  </head>
+  <body>
+    <h1 style="color: rgb(245, 246, 247)">Pokémon Search App</h1>
+    <div class="main-container">
+      <label for="search-bar">Search for Pokémon Name or ID:</label>
+      <div id="user-input">
+        <input type="text" id="search-bar">
+        <button>Search</button>
+      </div>
+      
+      <div id="pokemon-display">
+
+      </div>
+
+      <div id="stats-display">
+        
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
