Add styling to stats display section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,36 @@
       </div>
 
       <div id="stats-display">
-        
+        <table cellspacing="5">
+          <tr>
+            <th class="type"><strong>Base</strong></th>
+            <th class="value"><strong>Stats</strong></th>
+          </tr>
+          <tr>
+            <td class="type">HP:</td>
+            <td class="value"><span id="hp"></span></td>
+          </tr>
+          <tr>
+            <td class="type">Attack:</td>
+            <td class="value"><span id="attack"></span></td>
+          </tr>
+          <tr>
+            <td class="type">Defense:</td>
+            <td class="value"><span id="defense"></span></td>
+          </tr>
+          <tr>
+            <td class="type">Sp. Attack:</td>
+            <td class="value"><span id="sp-attack"></span></td>
+          </tr>
+          <tr>
+            <td class="type">Sp. Defense:</td>
+            <td class="value"><span id="sp-defense"></span></td>
+          </tr>
+          <tr>
+            <td class="type">Speed:</td>
+            <td class="value"><span id="speed"></span></td>
+          </tr>
+        </table>
       </div>
     </div>
     <script src="script.js"></script>
