Add functionality to display all stats

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <label for="search-bar">Search for Pokémon Name or ID:</label>
       <div id="user-input">
         <input type="text" id="search-bar">
-        <button>Search</button>
+        <button id="search-btn">Search</button>
       </div>
       
       <div id="pokemon-display">
